@@ -1,6 +1,5 @@
 * Support DVDs with errors on them. So we can recover from corrupt sectors in the .VOB. Also, handle corrupt .IFO files by using the backup .BUP files.
 * Support Random and Shuffle Titles. Only sequencial Titles are currently supported.
-* Support Still PGCs. Only Still Cells are currently supported.
 * rework documentation
 * implement restriction levels:
    0 - execute everything as the app commands
